[gd_scene load_steps=4 format=3 uid="uid://cqyjep2qql8da"]

[ext_resource type="Texture2D" uid="uid://nfix0qul73js" path="res://Textures/invader_frame.png" id="1_kdcob"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_ogeap"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6n74"]
radius = 3.0
height = 12.0

[node name="Node2D" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 13
collision_mask = 13
slide_on_ceiling = false
script = ExtResource("1_ogeap")

[node name="player_color" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -4.0
offset_right = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kdcob")
region_enabled = true
region_rect = Rect2(68, 4, 9, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h6n74")

[node name="rainbow_beam_timer" type="Timer" parent="."]

[connection signal="timeout" from="rainbow_beam_timer" to="." method="_on_rainbow_beam_timer_timeout"]
